Adjusted content height and added links
Links added for:
- SheCodes profile
- GitHub repo
- Netlify website

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="wrapper">
+      <div class="wrapper height">
         <div class="box-1">
           <h1>
             <span class="current-temperature">17</span> °C
@@ -43,7 +43,7 @@
           </h3>
         </div>
         <hr class="border-right" />
-        <div class="box-2">
+        <div class="box-2 height">
           <form class="search-form">
             <input type="search" placeholder="Search City" class="search" />
           </form>
@@ -81,7 +81,7 @@
             </div>
           </div>
         </div>
-        <div class="box-3">
+        <div class="box-3 height">
           <div class="card bottom-bar">
             <div class="card-body bottom-bar">
               <ul>
@@ -109,6 +109,20 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="links">
+        This project was coded by
+        <a
+          href="https://www.shecodes.io/graduates/82271-lily-do"
+          target="_blank"
+          >Lily Do</a
+        >
+        and is
+        <a href="https://github.com/koimainu/Weather-App" target="_blank"
+          >open-sourced on GitHub</a
+        >
+        and
+        <a href="https://www.netlify.com/" target="_blank">hosted on Netlify</a>
       </div>
     </div>
     <script src="src/index.js"></script>
